bug#39080  Compile errors in Cluster: LockQueue.hpp + PosixAsyncFile.cpp + more